--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
   "dependencies": {
     "buefy": "^0.6.2",
     "bulma-badge": "^0.1.0",
+    "dotenv": "^5.0.0",
+    "dotenv-webpack": "^1.5.4",
+    "firebase": "^4.8.2",
     "font-awesome": "^4.7.0",
+    "moment": "^2.20.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
