--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "dotenv-webpack": "^1.5.4",
     "firebase": "^4.8.2",
     "font-awesome": "^4.7.0",
+    "lodash": "^4.17.5",
     "moment": "^2.20.1",
     "vue": "^2.5.2",
+    "vue-async-computed": "^3.3.1",
+    "vue-croppa": "^1.3.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
